fix button label margin for i-tag
A tobago-behavior is now rendered inside a button. Because of that, the old CSS rule was leading to an unwanted margin-left on the button label.
The CSS rule is now adjusted for i-tag with a span

--- a/tobago-core/src/main/resources/scss/_tobago.scss
+++ b/tobago-core/src/main/resources/scss/_tobago.scss
@@ -174,6 +174,9 @@ $form-disabled-alpha: 0.5;
   > img + span {
     margin-left: .4em;
   }
+  > i + span {
+    margin-left: .4em;
+  }
 }
 
 /* button -------------------------------------------------------------- */
